<resources>
    <string name="app_name">Stych</string>


    <string name="field_s_required">Field %s is required.</string>
    <string name="field_s_required_or">Mobile number or Email, Field is required.</string>
    <string name="field_s_invalid">Provided is %s invalid.</string>
    <string name="field_s_short_d">Field %s is too short. Minimum required length is %d.</string>
    <string name="field_s_long_d">Field %s is too long. Maximum allowed length is %d.</string>
    <string name="s_s_not_match">%s and %s do not match.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="stych">Stych</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="password_des">Your password should be at least 8 characters and include one capital letter and symbol</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms"><b>Terms of Use &amp; Privacy Policy.</b></string>
    <string name="transfer_copy">Transfer a copy of this Life File to an existing user.</string>
    <string name="please_enter_email_to_send_link">Please enter your email address so we can send a password reset link.</string>
    <string name="submit">Submit</string>
    <string name="thank_you_for_signing_up">Thank You For Signing Up</string>
    <string name="welcome_to_stych">Welcome to Stych</string>
    <string name="transfer_a_life_file">Transfer a Life File</string>
    <string name="email_address_a">Email Address</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="life_file_size">Life File Size</string>
    <string name="free">Free</string>
    <string name="subscription">Subscription</string>
    <string name="terms_and_policy"><![CDATA[Terms of Use & Privacy Policy]]></string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_your_new_email_address">Please enter your new email address</string>
    <string name="change_email">Change Email</string>
    <string name="please_enter_new_password">Please enter your new password</string>
    <string name="gbs_storage">$1/month</string>
    <string name="unlimitedStorage">Unlimited Storage</string>
    <string name="restore_purchage">Restore Purchase</string>
    <string name="please_enter_email">Please enter email address.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="delete">Delete</string>
    <string name="link_shared_on_provided_email">Link shared on provided email address.</string>
    <string name="confirm_password_not_matched">Confirm password not matched with password.</string>
    <string name="select">Select</string>
    <string name="action_settings">Settings</string>
    <string name="manange_my_life_files">Manage My Life Files</string>
    <string name="rename_life_file">Rename Life File</string>
    <string name="create_a_new_life_file">Create a New Life File</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="do_you_want_edit_life">Please select an option</string>
    <string name="share_file">Share File</string>
    <string name="subscription_status">Subscription Status</string>
    <string name="subscription_level">Subscription Level</string>
    <string name="contact_us">Contact Us</string>
    <string name="your_life_files">Your Life Files</string>
    <string name="name">Name</string>
    <string name="provide_name">Provide name</string>
    <string name="create_transfer_switch_or_delete_life_file">Create, Transfer, Switch or Delete life file</string>
    <string name="share_or_delete_clip_here">Share or delete clip here</string>
    <string name="tap_to_camre_icon_to_reocrd">Tap to Camera button to record your life file</string>
    <string name="import_copies_of_your_favorate">Import copies of your favorate videos into this life file</string>
    <string name="thank_you_des">A Life File is a single video of all the important moments of your life. You can record or import clips into your Life File and all clips will automatically stitch together to create a movie of your life.</string>
    <string name="to_get_started_text">To get started name your first Life File.</string>
    <string name="loading">Loading...</string>
    <string name="login_success">Login successful.</string>
    <string name="register_success">Account created successfully.</string>
    <string name="please_create_new_file">Please Name This New Life File</string>
    <string name="rename_file">Rename Life File</string>
    <string name="rename">Rename</string>
    <string name="create">Create</string>
    <string name="no_record">No Record</string>
    <string name="code">Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="customer_support">Customer Support</string>
    <string name="gb35_of_storage">35 GBs of Storage</string>
    <string name="subscribe_cancel_msg">No worries, you can always subscribe the desired plan.</string>
    <string name="subscribe_error_msg">Ops, something went wrong while subscribing the plan!</string>
</resources>