<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".profile.changepassword.ChangePasswordActivity">

    <include layout="@layout/default_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_largexxx_size"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/color_app_blue"
        android:textSize="@dimen/text_largexx_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="@dimen/text_normal_size">

        <EditText
            android:id="@+id/oldPasswordText"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/text_normal_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large_size"
            android:text="@string/please_enter_new_password"
            android:textColor="@color/color_app_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_des"
            android:textColor="@color/color_app_grey" />

        <EditText
            android:id="@+id/passwordText"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/text_normal_size" />

        <EditText
            android:id="@+id/confirmPasswordText"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/text_normal_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_largex_size"
            android:background="@drawable/button_diff_satus"
            android:enabled="false"
            android:foreground="@drawable/custom_ripple_effect"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:theme="@style/ProgressBarTheme"
            android:padding="@dimen/padding_normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>