<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".start.login.LoginActivity">

    <include layout="@layout/default_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_largexxx_size"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/color_app_blue"
        android:textSize="@dimen/text_largexx_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="@dimen/text_normal_size">

        <EditText
            android:id="@+id/emailText"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="@dimen/text_normal_size" />

        <EditText
            android:id="@+id/passwordText"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/text_normal_size" />

        <TextView
            android:id="@+id/forgotPasswordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/color_app_blue"
            android:layout_marginTop="@dimen/text_small_size"
            android:background="?attr/selectableItemBackground"
            android:textSize="@dimen/text_normal_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_largex_size"
            android:enabled="false"
            android:textAllCaps="false"
            android:foreground="@drawable/custom_ripple_effect"
            android:background="@drawable/button_diff_satus"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:theme="@style/ProgressBarTheme"
            android:padding="@dimen/padding_normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>